- Fix Media types items layout issue (with empty space) - New function for auto scroll on anchor link + hash url - Update College responsiveness

--- a/themes/evolve/lessc/Andy.less
+++ b/themes/evolve/lessc/Andy.less
@@ -2259,6 +2259,11 @@ body #block-system-main{
         margin: 12px 0px 10px;
     }
     
+    .intro{
+        p{
+            font-size: 1.6em;
+        }
+    }
     p{
         font-size: 1.2em;
         padding-bottom: 0;
