--- a/themes/evolve/lessc/Drupal/Media.less
+++ b/themes/evolve/lessc/Drupal/Media.less
@@ -224,6 +224,12 @@ div#node-102 .content .item-list .pagination li {
 .media_filter ul li:hover a {
 	color: white;
 }
+.media_contents_filtered{
+	.dexp-grid-items{
+		display: flex;
+    	flex-wrap: wrap;
+	}
+}
 .PartnersDetail .modal-body {
 	height: 710px;
 	padding-top: 81px;
