--- a/themes/evolve/lessc/Drupal/inmotion.less
+++ b/themes/evolve/lessc/Drupal/inmotion.less
@@ -467,6 +467,11 @@
 
 				/* BODY TEXT */
 				.field-type-text-with-summary{
+					.intro{
+						p{
+							font-size: 1.6em;
+						}
+					}
 					h3{
 						color: #000;
 						font-size: 1.7em;
@@ -500,7 +505,7 @@
 					.image{
 						float: left;
 						padding-right: 40px;
-    				max-width: 385px;
+    					max-width: 385px;
 						float: left;
 						clear: both;
 						padding-top: 5px;
