--- a/themes/evolve/lessc/PD/PD.less
+++ b/themes/evolve/lessc/PD/PD.less
@@ -2848,6 +2848,7 @@ input[name="Couponcode"]{
                 }
                 .featured-img{
                     width: 40%;
+                    border: 1px solid rgba(0,0,0,0.12);
                     img{
                         width: 100%;
                     }
