--- a/themes/evolve/lessc/PD/college.less
+++ b/themes/evolve/lessc/PD/college.less
@@ -15,6 +15,18 @@
             align-items: center;
             max-width: 1500px;
             margin: 0 auto;
+            @media all and (max-width: 1300px){
+                background: black;
+            }
+            @media @desktop-width-down{
+                padding: 9% 17% 2%;
+            }
+            @media @larger-tablet-width-down{
+                padding: 10% 16% 5%;
+            }
+            @media @larger-phone-width-down{
+                padding: 36% 10% 5%;
+            }
             .page-main-header{
                 color: #fff;
                 font-family: Cairo;
@@ -29,14 +41,30 @@
                 width: 100%;
                 background-repeat: no-repeat;
                 background-position: center;
+                @media @larger-phone-width-down{
+                    margin: 0 10%;
+                }
             }
             h3{
                 margin-top: 0;
                 font-weight: 300;
                 font-size: 1.7em;
+                @media @desktop-width-down{
+                    font-size: 1.3em;
+                }
+                @media @larger-tablet-width-down{
+                    font-size: 1em;
+                }
+                @media @larger-phone-width-down{
+                    font-size: 1.6em;
+                }
             }
             p{
                 color: #fff;
+                font-size: 17px;
+                @media @larger-phone-width-down{
+                    font-size: 15px;
+                }
             }
             .separator{
                 width: 100%;
@@ -78,12 +106,9 @@
                 }
             }
         }
-        @media all and (max-width: @tablet-width){
-            .img-parallax{
-               top: -15%;
-            }
-            .top-banner{
-                padding: 5% 18% 5%;
+        .img-parallax{ 
+            @media @desktop-width-down{
+                top: 0;
             }
         }
         @media all and (max-width: @larger-phone-width){
@@ -120,6 +145,14 @@
 
     #section-banner #block-block-322{
         background-position: 70% 70px!important;  
+        #scroll-chevron{
+            @media @desktop-wodth-down{
+                margin: 15px 0 20px;
+            }
+            @media @larger-tablet-width-down{
+                margin: 15px 0 0px;
+            }
+        }
         .sub-top-banner{
             padding: 2%;
             margin: 0 auto;
@@ -131,6 +164,12 @@
             display: flex;
             justify-content: center;
             text-align: left;
+            @media @desktop-width-down{
+                padding: 2% 1% 2% 3%;
+            }
+            @media @larger-tablet-width-down{
+                padding: 2% 1% 3% 3%;
+            }
             & > .flex-container{
                 flex-wrap: nowrap;
                 padding: 0;
@@ -149,7 +188,7 @@
                 &:after{
                     content: '';
                     position: absolute;
-                    right: 15%;
+                    right: 10%;
                     height: 100%;
                     width: 1px;
                     background: #fff;
@@ -166,21 +205,33 @@
                 flex-direction: column;
                 justify-content: center;
                 padding-right: 30px;
+                @media @desktop-width-down{
+                    padding-left: 30px;
+                }
                 @media @larger-tablet-width-down{
                     width: 70%;
                     padding-left: 30px;
+                }
+                @media @larger-phone-width-down{
+                    padding-left: 0;
                 }
                 span:not(.lead-text){
                     letter-spacing: 0.5px;
                     font-size: 1em;
                     color: #fff;
                     font-weight: 500;
+                    @media @desktop-width-down{
+                        font-size: 0.8em;
+                    }
                 }
                 .lead-text{
                     display: block;
                     color: #fff;
                     font-size: 1.7em;
                     font-weight: 200;
+                    @media @larger-phone-width-down{
+                        padding: 10px 9%;
+                    }
                 }
                 p{
                     margin: 0;
@@ -191,6 +242,9 @@
                 flex-direction: row;
                 align-items: center;
                 justify-content: flex-end;
+                @media @desktop-width-down{
+                    justify-content: center;
+                }
             }
             .lead-text{
                 font-size: 1.6em;
@@ -225,9 +279,6 @@
         @media all and (max-width: @tablet-width){
             background-position: 72% 60px !important;
             background-attachment: fixed!important;
-            .top-banner{
-                padding: 10% 18% 5%;
-            }
             .sub-top-banner{
                 background: rgba(0,159,218,1);
                 text-align: center;
@@ -406,7 +457,7 @@
                 font-weight: 600;
                 font-family: Roboto!important;
                 text-align: center;
-                letter-spacing: 0.5px;
+                letter-spacing: 0;
                 @media all and (max-width: @tablet-width) {
                     font-weight: 500;
                 }
