--- a/themes/evolve/lessc/about-us.less
+++ b/themes/evolve/lessc/about-us.less
@@ -555,6 +555,22 @@
                         }
                     }
                 }
+                .portfolio-image{
+                    .field-item{
+                        overflow: hidden;
+                        display: flex;
+                        justify-content: center;
+                        align-items: flex-start;
+                        min-height: 202px;
+                        position: relative;
+                        img{
+                            height: 120%;
+                            width: auto;
+                            max-width: unset;
+                            position: absolute;
+                        }
+                    }
+                }
             }
         }
       }
